# clip_describer

./: .gitignore  README.md  pyproject.toml
clip_describer/: model.py  wordnet_parse.py
clip_describer/app/: home.py
clip_describer/core/: lists.py  model.py  text_generator.py  wordnet_parse.py
