[tool.poetry]
name = "clip-describer"
version = "0.1.0"
description = ""
authors = ["miguelvalente <miguelvalente@protonmail.com>"]
readme = "README.md"
packages = [{include = "clip_describer"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
clip = {git = "https://github.com/openai/CLIP.git"}
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
