[tool.poetry]
name = "clip-describer"
version = "0.1.0"
description = ""
authors = ["miguelvalente <miguelvalente@protonmail.com>"]
readme = "README.md"
packages = [{include = "clip_describer"}]

[tool.poetry.dependencies]
python = "^3.11"
clip = {git = "https://github.com/openai/CLIP.git"}
nltk = "^3.8.1"
streamlit = "^1.25.0"
torch = {url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp311-cp311-linux_x86_64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
